css/page.workingfile.css
/* ... */
@media only screen and (max-width: 999px) {
/*adds margin for breadcrumb and navigation for all layouts below desktop size*/
#breadcrumb, .not-front .region-sidebar-first 
  { margin-left: 2%; }
}

@media only screen and (min-width: 800px) and (max-width: 999px) {
  /*--- Slideshow ---*/
  .views-field-field-banner img {
    height: auto;
    z-index: -1;
  }
  .no-sidebars #block-views-slideshow-banner-block {
    width: 75%;
  }
  #columns .region-sidebar-second {
    width: 24%;
    margin-left: -25%;
  }
  
}

/*just for bullets on the slideshow banner*/
@media only screen and (min-width: 600px) and (max-width: 999px) {
.views-slideshow-controls-bottom {
    position: absolute;
    top: 160px;
    right: 5px;
    padding: 0;
    z-index: 200;
  }
  #menu-bar {
    border-bottom: 1px solid #002554;
    height: 40px;
  }
}
@media only screen and (min-width: 900px) {
  #menu-bar {
    border-bottom: 1px solid #002554;
    height: 40px;
  }
  
  .view-slideshow-banner {
    height: 240px;
  }
  table.responsive th,
  table.responsive2 th,
  table.responsive3 th {
    padding: .5em;
    border: none;
    border-top: 3px solid #ccc;
    border-bottom: 3px solid #ccc;
    text-transform: uppercase;
  }
  table.responsive td,
  table.responsive2 td,
  table.responsive3 td {
    background: #f4f4f4;
    padding: .5em;
  }
  table.responsive tr:nth-of-type(odd) td,
  table.responsive2 tr:nth-of-type(odd) td,
  table.responsive3 tr:nth-of-type(odd) td {
    background: #eee;
  }
}
@media only screen and (min-width: 999px) {
  .views-field-field-banner img {
    z-index: -1;
  }
  .views-slideshow-controls-bottom {
    position: absolute;
    top: 195px;
    right: 45px;
    padding: 0;
    z-index: 200;
  }
  .sidebar-first #main-content {
    width: 750px;
  }
  .sidebar-second #main-content {
    margin-right: 2%;
  }
  .sidebar-first #main-content {
    float: left;
    width: 750px;
    margin-left: 2%;
  }
  .sidebar-first #main-content {
    margin-right: 0;
  }
  .two-sidebars #main-content {
    margin: 20px 2% 0 2%;
    width: 500px;
    float: left;
  }

  #columns .region-sidebar-second {
    width: 23%;
    margin-left: -23%;
  }
  .cta-wrap .cta-img {height: 138px} /* fixes height of images for CTA*/
  
}
@media only screen and (min-width: 1024px) {
.cta-img {
    height: 138px;
  }
.views-slideshow-controls-bottom {
    right: 5px;
  }
}
/*fixes the slideshow banner overlapping with the page text on tablet layout*/

.front .region-highlighted { height: 250px}
/*needs to override the wider range specified for cta margin row-3*/
@media only screen and (min-width: 756px) and (max-width: 767px) {
  .front .region-content .view-cta-homepage .views-row-3 { margin-right:0px; margin-top: 0px}
  .views-row-3 .cta-wrap { margin-right:0} /*3rd CTA doesn not need a margin, so it has space to line up in 1 row on tablet. A margin would make it jump underneath*/
}/* when 3 CTA are inline on main home page area, the 3rd CTA should be allined*/
/* fixes margin top for 2nd and 4th homepage CTA */
@media only screen and (min-width: 479px) and (max-width: 514px) {
  .front .view-cta-homepage .views-row-2, 
  .front .view-cta-homepage .views-row-4 { margin-top: 20px}
}

